Added pathfinder wand item

--- a/src/main/resources/assets/eidolon/lang/en_us.json
+++ b/src/main/resources/assets/eidolon/lang/en_us.json
@@ -9,6 +9,7 @@
   "lore.eidolon.warded_mail": "Defends from magic attacks.",
   "lore.eidolon.soulfire_wand": "Fires magical sparks.",
   "lore.eidolon.bonechill_wand": "Chills you to the bone.",
+  "lore.eidolon.pathfinder_wand": "Cuts through the physical world.",
   "lore.eidolon.codex": "Your guide to the supernatural.",
   "lore.eidolon.reaper_scythe": "Harvester of souls.",
   "lore.eidolon.cleaving_axe": "Extremely sharp edge.",
@@ -62,6 +63,7 @@
   "item.eidolon.resolute_belt": "Resolute Belt",
   "item.eidolon.soulfire_wand": "Soulfire Wand",
   "item.eidolon.bonechill_wand": "Bonechill Wand",
+  "item.eidolon.pathfinder_wand": "Pathfinder Wand",
   "item.eidolon.spawn_wraith": "Spawn Wraith",
   "item.eidolon.spawn_zombie_brute": "Spawn Zombie Brute",
   "item.eidolon.spawn_necromancer": "Spawn Necromancer",
@@ -305,6 +307,9 @@
   "eidolon.codex.chapter.bonechill_wand": "Bonechill Wand",
     "eidolon.codex.page.bonechill_wand.title": "Bonechill Wand",
     "eidolon.codex.page.bonechill_wand": "The bonechill wand chills the very soul of any being unlucky enough to be taken under its curse. Upon striking a target, an icy hold grips them, preventing all health regeneration in the same manner as the claws of a wraith.",
+  "eidolon.codex.chapter.pathfinder_wand": "Pathfinder Wand",
+    "eidolon.codex.page.pathfinder_wand.title": "Pathfinder Wand",
+    "eidolon.codex.page.pathfinder_wand": "The Pathfinder wand allows the caster to manipulate physical laws of space and time. By casting the wand nearby you will be moved there after 3 seconds. Otherwise, by casting into another location will be inmediatly teleported and interchange locations with any entity within the targeted area.",
   "eidolon.codex.chapter.reaper_scythe": "Reaper Scythe",
     "eidolon.codex.page.reaper_scythe.title": "Reaper Scythe",
     "eidolon.codex.page.reaper_scythe": "A handy - if grim - tool for the enterprising necromancer. When an undead creature is felled by the reaper scythe, its body is destroyed and its soul is crystallized, permitting a more active approach to harvesting soul shards.",
